@@ -14,15 +14,14 @@
 
 from flumotion.component import feedcomponent
 
-class FLVEncoder(feedcomponent.ParseLaunchComponent):
+class VP6Encoder(feedcomponent.ParseLaunchComponent):
     checkTimestamp = True
     checkOffset = True
 
     def get_pipeline_string(self, properties):
-#       return "ffmpegcolorspace ! ffenc_flv name=encoder" 
-        return "ffmpegcolorspace ! vfwenc_vp6vfwv6 name=encoder" 
+        return "ffmpegcolorspace ! videoflip method=5 ! vfwenc_vp6vfwv6 name=encoder" 
 
     def configure_pipeline(self, pipeline, properties):
         element = pipeline.get_by_name('encoder')
-        if properties.has_key('bitrate'):
-            element.set_property('bitrate', properties['bitrate'])
+        if properties.has_key('config'):
+            element.set_property('config', properties['config'])
